tests/neg/i17738-toplevel-infix.check
-- [E183] Syntax Error: tests/neg/i17738-toplevel-infix.scala:10:10 ----------------------------------------------------
10 |infix val toplevelVal = ??? // error
   |          ^
   |          a toplevel val cannot be infix
-- [E183] Syntax Error: tests/neg/i17738-toplevel-infix.scala:11:10 ----------------------------------------------------
11 |infix var toplevelVar = ??? // error
   |          ^
   |          a toplevel var cannot be infix
-- [E183] Syntax Error: tests/neg/i17738-toplevel-infix.scala:12:10 ----------------------------------------------------
12 |infix def toplevelDef = ??? // error
   |          ^
   |          a toplevel def cannot be infix
-- [E183] Syntax Error: tests/neg/i17738-toplevel-infix.scala:13:12 ----------------------------------------------------
13 |infix given toplevelGiven: Int = ??? // error
   |            ^
   |            a toplevel given cannot be infix
-- [E183] Syntax Error: tests/neg/i17738-toplevel-infix.scala:14:19 ----------------------------------------------------
14 |infix implicit val topevelImplicit: Int = ??? // error
   |                   ^
   |                   a toplevel val cannot be infix
